--- a/css/style.css
+++ b/css/style.css
@@ -2,9 +2,9 @@
 
 :root {
   --color-white: #f3f3f3;
-  --color-darkblue: #1b1b32;
+  --color-darkblue: #25258b;
   --color-darkblue-dark: rgba(27, 27, 50, 0.8);
-  --color-green: #37af65;
+  --color-green: #32a75f;
 }
 
 *,
